--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.7.9",
     "docx": "^9.1.0",
+    "ethers": "^6.13.5",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.13.5",
     "groq-sdk": "^0.19.0",
