--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "@web3-storage/w3up-client": "^17.2.0",
     "axios": "^1.7.9",
     "docx": "^9.1.0",
     "ethers": "^6.13.5",
@@ -22,12 +23,16 @@
     "iso-639-1": "^3.1.5",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.468.0",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.1",
     "react-markdown": "^9.1.0",
     "react-router-dom": "^7.0.2",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
